<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/black"
android:orientation="vertical"
tools:context=".FindActivity">

<TextView
    android:id="@+id/txt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="50dp"
    android:textColor="@color/white"
    android:textSize="30dp"
    android:text="FIND US" />

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="585dp"
    android:layout_marginLeft="60dp"
    android:layout_marginTop="50dp"
    android:layout_marginRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/fotoAna"
                            android:layout_width="89dp"
                            android:layout_height="82dp"
                            android:layout_marginTop="11dp"
                            app:srcCompat="@drawable/foto1"
                            android:clickable="true"
                            android:focusable="true"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/txtAna"
                            android:layout_width="200dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/desAna" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/fotoLuisa"
                            android:layout_width="89dp"
                            android:layout_height="82dp"
                            android:layout_marginTop="11dp"
                            android:clickable="true"
                            android:focusable="true"
                            app:srcCompat="@drawable/foto2"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/txtArticDos"
                            android:layout_width="200dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/des2" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </TableRow>



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/fotoEva"
                            android:layout_width="89dp"
                            android:layout_height="82dp"
                            android:layout_marginTop="11dp"
                            app:srcCompat="@drawable/foto4"
                            android:clickable="true"
                            android:focusable="true"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/txtThe2"
                            android:layout_width="200dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/des4" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/fotoHannah"
                            android:layout_width="89dp"
                            android:layout_height="82dp"
                            android:layout_marginTop="11dp"
                            app:srcCompat="@drawable/foto5"
                            android:clickable="true"
                            android:focusable="true"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/txtChaseUno"
                            android:layout_width="200dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/des5" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="185dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/chaseDos"
                            android:layout_width="89dp"
                            android:layout_height="82dp"
                            app:srcCompat="@drawable/foto6"
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_marginTop="11dp"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/fotoCamila"
                            android:layout_width="200dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/des6" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>

</LinearLayout>